@@ -17,6 +17,7 @@ git - ?
 	- Batch edit downloadable trial releases to add freeware status
 	- Remind the user to type English in several form fields
 	- Full reply button in Quick reply box + larger textarea in post form
+	- Removed visual-novels.net link from the interface
 
 2.6 - 2009-08-09
 	- New screen resolutions: 1024x600 and 1600x1200
